🐛Bug: 작동 안된 부분 고침